2008-12-09  Andrew Haley  <aph@redhat.com>

	* fixed-value.c (do_fixed_add): Add comment.
	* tree-ssa-loop-ivopts.c (iv_ca_cost): Likewise.
	* builtins.c (fold_builtin_sqrt): Likewise.

2008-12-09  Kai Tietz  <kai.tietz@onevision.com>

	PR/38366
	* function.c (aggregate_value_p): Get fntype from CALL_EXPR in any
	case.
	* calls.c (nitialize_argument_information): Add fntype argument 
	and use it for calls.promote_function_args.
        (expand_call): Pass fntype to aggregate_value_p if no fndecl
	available and pass additional fntype to
	initialize_argument_information.
	* config/i386/i386.c (ix86_reg_parm_stack_space): Remove cfun part
	to get function abi type.
	(init_cumulative_args): Use for abi kind detection fntype, when no
	fndecl is available.

2008-12-09  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/s390/s390.md (movti, movdi_64, movdi_31,
	  *movsi_zarch, *movhi, *movqi, *mov<mode>_64, *mov<mode>_31,
	  *mov<mode>_64dfp, *mov<mode>_64, *mov<mode>_31, mov<mode>): Remove
	  Q->Q alternative.
	  (Integer->BLKmode splitter): Removed.

2008-12-08  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_set_memflags): Process memory
	references in full insn sequence.

2008-12-09  Jason Merrill  <jason@redhat.com>

	PR c++/38410
	* gimplify.c (gimplify_init_constructor): Don't write out a static
	copy of the CONSTRUCTOR for TREE_ADDRESSABLE types or small sparse
	initializers.

2008-12-09 Tobias Grosser  <grosser@fim.uni-passau.de>

	PR middle-end/38084
	Fix testsuite/gfortran.dg/graphite/id-3.f90.
	* graphite.c (scopdet_basic_block_info): Fix bug that found some
	regions more than once.
	* testsuite/gfortran.dg/graphite/id-3.f90: New.
	* gcc/testsuite/gcc.dg/graphite/pr38084.c: New.

2008-12-09  Ben Elliston  <bje@au.ibm.com>

	* emutls.c (__emutls_get_address): Prototype.
	(__emutls_register_common): Likewise.

	* config/dfp-bit.c (DFP_TO_INT): Remove unnecessary cast.

2008-12-09  Ben Elliston  <bje@au.ibm.com>
