@@ -1,3 +1,10 @@
+2008-12-09  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/38445
+	* tree-ssa-structalias.c (emit_pointer_definition): Only visit
+	names once.
+	(emit_alias_warning): Adjust.
+
 2008-12-09  Andrew Haley  <aph@redhat.com>
 
 	* fixed-value.c (do_fixed_add): Add comment.
